test: Mockito javaagent 옵션 추가