@@ -70,5 +70,6 @@ dokka {
 tasks {
   test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading") // Mockito
   }
 }
